WIP: Initial changes on HasSimpleAnnotate and AnnotatorModel due to Spark 4 migration